Starting with localisation

--- a/src/tixlcontrol/templates/tixlcontrol/auth/login.html
+++ b/src/tixlcontrol/templates/tixlcontrol/auth/login.html
@@ -1,5 +1,6 @@
 {% extends "tixlcontrol/auth/base.html" %}
 {% load bootstrap3 %}
+{% load i18n %}
 {% block content %}
 	<form class="form-signin" action="" method="post">
 		{% bootstrap_form_errors form type='all' layout='inline' %}
@@ -8,7 +9,7 @@
 		{% bootstrap_field form.password %}
 		<div class="form-group buttons">
 			<button type="submit" class="btn btn-primary">
-				Log in
+				{% trans "Log in" %}
 			</button>
 		</div>
 	</form>
