Add footer to auth templates

--- a/src/tixlcontrol/static/tixlcontrol/less/auth.less
+++ b/src/tixlcontrol/static/tixlcontrol/less/auth.less
@@ -4,6 +4,12 @@ body {
 	background: #eee;
 }
 
+footer {
+	text-align: center;
+	padding: 10px 0;
+	font-size: 11px;
+}
+
 .form-signin {
 	.well;
 
