--- a/src/tixlcontrol/templates/tixlcontrol/auth/base.html
+++ b/src/tixlcontrol/templates/tixlcontrol/auth/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>{{ settings.TIXL_INSTANCE_NAME }}</title>
 		{% compress css %}
 		<link rel="stylesheet" type="text/less" href="{% static "tixlcontrol/less/auth.less" %}" />
 		{% endcompress %}
