Manage variations for items with exactly one property

--- a/src/tixlcontrol/static/tixlcontrol/less/main.less
+++ b/src/tixlcontrol/static/tixlcontrol/less/main.less
@@ -1,3 +1,4 @@
 @import "../../../../tixlbase/static/bootstrap/less/bootstrap.less";
 @import "../../../../tixlbase/static/fontawesome/less/font-awesome.less";
 @fa-font-path: "../../fontawesome/fonts";
+@import "forms.less";
