--- a/src/tixlcontrol/templates/tixlcontrol/item/base.html
+++ b/src/tixlcontrol/templates/tixlcontrol/item/base.html
@@ -5,6 +5,7 @@
 	<h1>{% trans "Modify item:" %} {{ item.name }}</h1>
 	<ul class="nav nav-pills">
 		<li {% if "event.item" == url_name %}class="active"{% endif %}><a href="{% url 'control:event.item' organizer=request.event.organizer.slug event=request.event.slug item=item.pk %}">{% trans "General information" %}</a></li>
+		<li {% if "event.item.variations" == url_name %}class="active"{% endif %}><a href="{% url 'control:event.item.variations' organizer=request.event.organizer.slug event=request.event.slug item=item.pk %}">{% trans "Variations" %}</a></li>
 	</ul>
 	{% block inside %}
 	{% endblock %}
