Manage variations for items with any number of properties

--- a/src/tixlcontrol/templates/tixlcontrol/item/variations_2d.html
+++ b/src/tixlcontrol/templates/tixlcontrol/item/variations_2d.html
@@ -17,8 +17,8 @@
 			<tbody>
 				{% for sub in forms %}
 					<tr>
-						<td>{{ sub.0.subval.value }}</td>
-						{% for form in sub %}
+						<td>{{ sub.row }}</td>
+						{% for form in sub.forms %}
 							<td>
 								{% bootstrap_field form.active layout='inline' %}
 								{% bootstrap_field form.default_price layout='inline' %}
