Control UI for questions

--- a/src/tixlcontrol/templates/tixlcontrol/item/index.html
+++ b/src/tixlcontrol/templates/tixlcontrol/item/index.html
@@ -25,8 +25,9 @@
 			{% bootstrap_field form.tax_rate layout="horizontal" %}
 		</fieldset>
 		<fieldset>
-			<legend>{% trans "Variations" %}</legend>
+			<legend>{% trans "Advanced settings" %}</legend>
 			{% bootstrap_field form.properties layout="horizontal" %}
+			{% bootstrap_field form.questions layout="horizontal" %}
 		</fieldset>
 		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
