--- a/src/tixlcontrol/static/tixlcontrol/less/forms.less
+++ b/src/tixlcontrol/static/tixlcontrol/less/forms.less
@@ -24,3 +24,7 @@ td > .form-group > .checkbox {
     .opacity(.65);
     .box-shadow(none);
 }
+
+.form-plugins .panel-title {
+	line-height: 34px;
+}
