Bootstrap the form magic for inline restriction formset variation controls

--- a/src/tixlcontrol/templates/tixlcontrol/item/restrictions.html
+++ b/src/tixlcontrol/templates/tixlcontrol/item/restrictions.html
@@ -21,7 +21,7 @@
 					<script type="form-template" data-formset-empty-form>
 						{% escapescript %}
 							<div class="form-horizontal" data-formset-form>
-								{% bootstrap_form set.formset.empty_form layout="horizontal" %}
+								{% bootstrap_form set.formset.initialized_empty_form layout="horizontal" %}
 							</div>
 						{% endescapescript %}
 					</script>
