Render logic for ItemVariation field

--- a/src/tixlcontrol/static/tixlcontrol/less/forms.less
+++ b/src/tixlcontrol/static/tixlcontrol/less/forms.less
@@ -28,3 +28,8 @@ td > .form-group > .checkbox {
 .form-plugins .panel-title {
 	line-height: 34px;
 }
+
+.restriction-formset .variations label {
+    margin: 0;
+
+}
