CSS: Unified submit control

--- a/src/tixlcontrol/static/tixlcontrol/less/forms.less
+++ b/src/tixlcontrol/static/tixlcontrol/less/forms.less
@@ -31,5 +31,19 @@ td > .form-group > .checkbox {
 
 .restriction-formset .variations label {
     margin: 0;
+}
 
+.submit-group {
+    margin: 0 !important;
+    margin-top: 15px;
+    padding: 15px;
+    background: #eeeeee;
+    text-align: right;
+    .btn-save {
+        .btn-lg;
+    }
+    .btn-cancel {
+        .pull-left;
+        .btn-lg;
+    }
 }
