--- a/src/tixlcontrol/templates/tixlcontrol/items/property.html
+++ b/src/tixlcontrol/templates/tixlcontrol/items/property.html
@@ -61,12 +61,10 @@
 				<button type="button" class="btn btn-default" data-formset-add><i class="fa fa-plus"></i> {% trans "Add a new value" %}</button>
 			</div>
 		</fieldset>
-		<div class="form-group">
-			<div class="col-sm-offset-2 col-sm-10">
-				<button type="submit" class="btn btn-primary">
-					{% trans "Save" %}
-				</button>
-			</div>
+		<div class="form-group submit-group">
+            <button type="submit" class="btn btn-primary btn-save">
+                {% trans "Save" %}
+            </button>
 		</div>
 	</form>
 {% endblock %}
