--- a/src/tixlcontrol/templates/tixlcontrol/event/settings.html
+++ b/src/tixlcontrol/templates/tixlcontrol/event/settings.html
@@ -34,12 +34,10 @@
 			{% bootstrap_field form.payment_term_days layout="horizontal" %}
 			{% bootstrap_field form.payment_term_last layout="horizontal" %}
 		</fieldset>
-		<div class="form-group">
-			<div class="col-sm-offset-2 col-sm-10">
-				<button type="submit" class="btn btn-primary">
-					{% trans "Save" %}
-				</button>
-			</div>
+		<div class="form-group submit-group">
+            <button type="submit" class="btn btn-primary btn-save">
+                {% trans "Save" %}
+            </button>
 		</div>
 	</form>
 {% endblock %}
