--- a/src/tixlcontrol/templates/tixlcontrol/item/restrictions.html
+++ b/src/tixlcontrol/templates/tixlcontrol/item/restrictions.html
@@ -29,12 +29,10 @@
 				</div>
 			</fieldset>
 		{% endfor %}
-		<div class="form-group">
-			<div class="col-sm-12">
-				<button type="submit" class="btn btn-primary">
-					{% trans "Save" %}
-				</button>
-			</div>
+		<div class="form-group submit-group">
+            <button type="submit" class="btn btn-primary btn-save">
+                {% trans "Save" %}
+            </button>
 		</div>
 	</form>
 	
