--- a/src/tixlcontrol/templates/tixlcontrol/item/variations_nd.html
+++ b/src/tixlcontrol/templates/tixlcontrol/item/variations_nd.html
@@ -32,12 +32,10 @@
 				</tbody>
 			</table>
 		{% endfor %}
-		<div class="form-group">
-			<div class="col-sm-12">
-				<button type="submit" class="btn btn-primary">
-					{% trans "Save" %}
-				</button>
-			</div>
+		<div class="form-group submit-group">
+            <button type="submit" class="btn btn-primary btn-save">
+                {% trans "Save" %}
+            </button>
 		</div>
 	</form>
 	
