--- a/src/tixlcontrol/static/tixlcontrol/less/forms.less
+++ b/src/tixlcontrol/static/tixlcontrol/less/forms.less
@@ -34,8 +34,7 @@ td > .form-group > .checkbox {
 }
 
 .submit-group {
-    margin: 0 !important;
-    margin-top: 15px;
+    margin: 15px 0 0 0 !important;
     padding: 15px;
     background: #eeeeee;
     text-align: right;
@@ -46,4 +45,8 @@ td > .form-group > .checkbox {
         .pull-left;
         .btn-lg;
     }
+}
+
+.container ul.nav-pills {
+    margin: 20px 0;
 }
