We don't need the 2-d layout, as it is only a special case of the n-d layout

--- a/src/tixlcontrol/templates/tixlcontrol/item/variations_nd.html
+++ b/src/tixlcontrol/templates/tixlcontrol/item/variations_nd.html
@@ -5,7 +5,9 @@
 	<form action="" method="post">
 		{% csrf_token %}
 		{% for major in forms %}
-			<h3>{{ major.row }}</h3>
+            {% if major.row %}
+			    <h3>{{ major.row }}</h3>
+            {% endif %}
 			<table class="table">
 				<thead>
 					<tr>
@@ -18,7 +20,7 @@
 				<tbody>
 					{% for sub in major.forms %}
 						<tr>
-							<td>{{ sub.row }}</td>
+							<td>{{ sub.row.value }}</td>
 							{% for form in sub.forms %}
 								<td>
 									{% bootstrap_field form.active layout='inline' %}
