--- a/src/tixlcontrol/templates/tixlcontrol/items/question_delete.html
+++ b/src/tixlcontrol/templates/tixlcontrol/items/question_delete.html
@@ -8,7 +8,7 @@
 		{% csrf_token %}
 		<p>{% blocktrans %}Are you sure you want to the question <strong>{{ question }}</strong>?{% endblocktrans %}</p>
 		{% if dependent|length > 0 %}
-			<p>{% blocktrans %}All answers to the question given by the buyers of the following tickets will be <strong>permanently lost</strong>.{% endblocktrans %}</p>
+			<p>{% blocktrans %}All answers to the question given by the buyers of the following tickets will be <strong>lost</strong>.{% endblocktrans %}</p>
 			{% for item in dependent %}
 				<li><a href="{% url "control:event.item" organizer=request.event.organizer.slug event=request.event.slug item=item.pk %}">{{ item.name }}</a></li>
 			{% endfor %}
@@ -17,7 +17,7 @@
             <a href="{% url "control:event.items.questions" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default btn-cancel">
                 {% trans "Cancel" %}
             </a>
-            <button type="submit" class="btn btn-primary btn-save">
+            <button type="submit" class="btn btn-danger btn-save">
                 {% trans "Delete" %}
             </button>
 		</div>
