--- a/src/tixlcontrol/templates/tixlcontrol/items/quota_delete.html
+++ b/src/tixlcontrol/templates/tixlcontrol/items/quota_delete.html
@@ -17,7 +17,7 @@
             <a href="{% url "control:event.items.quotas" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default btn-cancel">
                 {% trans "Cancel" %}
             </a>
-            <button type="submit" class="btn btn-primary btn-save">
+            <button type="submit" class="btn btn-danger btn-save">
                 {% trans "Delete" %}
             </button>
 		</div>
