Fix an untranslated string

--- a/src/tixlcontrol/templates/tixlcontrol/event/plugins.html
+++ b/src/tixlcontrol/templates/tixlcontrol/event/plugins.html
@@ -29,7 +29,7 @@
 						</div>
 					</div>
 					<div class="panel-body">
-						<p class="meta">Version {{ plugin.version }} by <em>{{ plugin.author }}</em></p>
+						<p class="meta">{% blocktrans %}Version {{ plugin.version }} by <em>{{ plugin.author }}</em>{% endblocktrans %}</p>
 						<p>{{ plugin.description }}</p>
 					</div>
 				</div>
