--- a/src/tixlcontrol/templates/tixlcontrol/item/restrictions.html
+++ b/src/tixlcontrol/templates/tixlcontrol/item/restrictions.html
@@ -3,11 +3,16 @@
 {% load bootstrap3 %}
 {% load formset_tags %}
 {% block inside %}
+    <p>{% blocktrans trimmed %}
+        In this area, you can choose of a set of "restriction types" to restrict the availability of your item with
+        certain conditions.
+    {% endblocktrans %}</p>
     <form action="" method="post">
         {% csrf_token %}
         {% for set in formsets %}
             <fieldset>
                 <legend>{{ set.title }}</legend>
+                <p>{{ set.description }}</p>
                 <div data-formset class="restriction-formset" data-formset-prefix="{{ set.formset.prefix }}">
                     <div data-formset-body class="panel-group collapse" id="accordion_{{ set.formset.prefix }}">
                         {{ set.formset.management_form }}
