tixlcontrol: Quota UI

--- a/src/tixlcontrol/static/tixlcontrol/less/forms.less
+++ b/src/tixlcontrol/static/tixlcontrol/less/forms.less
@@ -47,6 +47,10 @@ td > .form-group > .checkbox {
     }
 }
 
+.panel .form-group:last-child {
+    margin-bottom: 0;
+}
+
 .container ul.nav-pills {
     margin: 20px 0;
 }
@@ -56,6 +60,13 @@ td > .form-group > .checkbox {
         margin: 0;
     }
 }
+
+.table-quotas td ul {
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
+}
+
 @media (min-width: @screen-sm-min) {
     .variation-matrix > tbody > tr > td {
         line-height: 34px;
