--- a/src/tixlcontrol/templates/tixlcontrol/item/restrictions.html
+++ b/src/tixlcontrol/templates/tixlcontrol/item/restrictions.html
@@ -22,7 +22,7 @@
                                     <h4 class="panel-title">
                                         <a data-toggle="collapse" data-parent="#accordion"
                                            href="#collapse{{ f.prefix }}">
-                                            Test
+                                            {{ set.title }}
                                         </a>
                                     </h4>
                                 </div>
