--- a/src/tixlcontrol/templates/tixlcontrol/items/quotas.html
+++ b/src/tixlcontrol/templates/tixlcontrol/items/quotas.html
@@ -19,7 +19,7 @@
 	<p>
 		<a href="{% url "control:event.items.quotas.add" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default"><i class="fa fa-plus"></i> {% trans "Create a new quota" %}</a>
 	</p>
-	<table class="table table-hover">
+	<table class="table table-hover table-quotas">
 		<thead>
 			<tr>
 				<th>{% trans "Quota name" %}</th>
@@ -33,7 +33,15 @@
 			{% for q in quotas %}
 			<tr>
 				<td><strong><a href="{% url "control:event.items.quotas.edit" organizer=request.event.organizer.slug event=request.event.slug quota=q.identity %}">{{ q.name }}</a></strong></td>
-				<td></td>
+				<td>
+                	<ul>
+                        {% for item in q.items.all %}
+                            <li><a href="
+                            {% url "control:event.item" organizer=request.event.organizer.slug event=request.event.slug item=item.identity %}"
+                                    >{{ item.name }}</a></li>
+                        {% endfor %}
+                    </ul>
+                </td>
 				<td>{{ q.size }}</td>
                 <td></td>
 				<td class="text-right"><a href="{% url "control:event.items.quotas.delete" organizer=request.event.organizer.slug event=request.event.slug quota=q.identity %}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a></td>
