--- a/src/tixlcontrol/templates/tixlcontrol/items/index.html
+++ b/src/tixlcontrol/templates/tixlcontrol/items/index.html
@@ -3,6 +3,9 @@
 {% block title %}{% trans "Items" %}{% endblock %}
 {% block inside %}
 	<h1>{% trans "Items" %}</h1>
+    <p>
+        <a href="{% url "control:event.items.add" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default"><i class="fa fa-plus"></i> {% trans "Create new item" %}</a>
+    </p>
 	<table class="table table-condensed table-hover">
 		<thead>
 			<tr>
@@ -15,7 +18,7 @@
 			<tr>
 				<td><strong><a href="
 				{% url "control:event.item" organizer=request.event.organizer.slug event=request.event.slug item=i.identity %}">{{ i.name }}</a></strong></td>
-				<td>{{ i.category }}</td>
+				<td>{% if i.category %}{{ i.category }}{% endif %}</td>
 			</tr>
 			{% endfor %}
 		</tbody>
