--- a/src/pretixpresale/static/pretixpresale/less/main.less
+++ b/src/pretixpresale/static/pretixpresale/less/main.less
@@ -1,3 +1,10 @@
 @import "../../../../pretixbase/static/bootstrap/less/bootstrap.less";
 @import "../../../../pretixbase/static/fontawesome/less/font-awesome.less";
 @fa-font-path: "../../fontawesome/fonts";
+
+.input-item-count {
+  text-align: center;
+}
+.availabilitybox.available {
+  text-align: center;
+}
