First steps on item availability

--- a/src/pretixpresale/static/pretixpresale/less/main.less
+++ b/src/pretixpresale/static/pretixpresale/less/main.less
@@ -2,9 +2,4 @@
 @import "../../../../pretixbase/static/fontawesome/less/font-awesome.less";
 @fa-font-path: "../../fontawesome/fonts";
 
-.input-item-count {
-  text-align: center;
-}
-.availabilitybox.available {
-  text-align: center;
-}
+@import "event.less";
