--- a/src/pretixpresale/templates/pretixpresale/event/index.html
+++ b/src/pretixpresale/templates/pretixpresale/event/index.html
@@ -1,40 +1,75 @@
 {% extends "pretixpresale/event/base.html" %}
+{% load i18n %}
 
 {% block content %}
     {% for tup in items_by_category %}
-        <h3>{{ tup.0.name }}</h3>
-        {% for item in tup.1 %}
-            {% if item.has_variations %}
-                <div class="row-fluid">
-                    <div class="col-md-8">
-                        <strong>{{ item.name }}</strong>
-                        <p>{{ item.short_description }}</p>
-                    </div>
-                    <div class="clearfix"></div>
-                </div>
-                {% for var in item.available_variations %}
-                    <div class="row-fluid">
-                        <div class="col-md-8">
-                            {{ var }}
-                        </div>
-                        <div class="col-md-1 availability-box abailable">
-                            <input type="number" class="form-control input-item-count" placeholder="0" min="0">
+        <section>
+            <h3>{{ tup.0.name }}</h3>
+            {% for item in tup.1 %}
+                {% if item.has_variations %}
+                    <div class="row-fluid product-row headline">
+                        <div class="col-md-8 col-xs-12">
+                            <strong>{{ item.name }}</strong>
+                            {% if item.short_description %}<p>{{ item.short_description }}</p>{% endif %}
                         </div>
                         <div class="clearfix"></div>
                     </div>
-                {% endfor %}
-            {% else %}
-                <div class="row-fluid">
-                    <div class="col-md-8">
-                        <strong>{{ item.name }}</strong>
-                        <p>{{ item.short_description }}</p>
+                    {% for var in item.available_variations %}
+                        <div class="row-fluid product-row variation">
+                            <div class="col-md-8 col-xs-12">
+                                {{ var }}
+                            </div>
+                            <div class="col-md-2 col-xs-6 price">
+                                {{ event.currency }} {{ var.price|floatformat:2 }}
+                                {% if item.tax_rate %}
+                                    <br /><small>{% blocktrans trimmed with rate=item.tax_rate %}
+                                        incl. {{ rate }}% taxes
+                                    {% endblocktrans %}</small>
+                                {% endif %}
+                            </div>
+                            {% if var.cached_availability == 0 %}
+                                <div class="col-md-2 col-xs-6 availability-box available">
+                                    <input type="number" class="form-control input-item-count" placeholder="0" min="0">
+                                </div>
+                            {% else %}
+                                {% include "pretixpresale/event/fragment_availability.html" with avail=var.cached_availability %}
+                            {% endif %}
+                            <div class="clearfix"></div>
+                        </div>
+                    {% endfor %}
+                {% else %}
+                    <div class="row-fluid product-row simple">
+                        <div class="col-md-8 col-xs-12">
+                            <strong>{{ item.name }}</strong>
+                            {% if item.short_description %}<p>{{ item.short_description }}</p>{% endif %}
+                        </div>
+                        <div class="col-md-2 col-xs-6 price">
+                            {{ event.currency }} {{ item.price|floatformat:2 }}
+                            {% if item.tax_rate %}
+                                <br /><small>{% blocktrans trimmed with rate=item.tax_rate %}
+                                incl. {{ rate }}% taxes
+                            {% endblocktrans %}</small>
+                            {% endif %}
+                        </div>
+                        {% if item.cached_availability == 0 %}
+                            <div class="col-md-2 col-xs-6 availability-box available">
+                                <input type="number" class="form-control input-item-count" placeholder="0" min="0">
+                            </div>
+                        {% else %}
+                            {% include "pretixpresale/event/fragment_availability.html" with avail=item.cached_availability %}
+                        {% endif %}
+                        <div class="clearfix"></div>
                     </div>
-                    <div class="col-md-1 availability-box abailable">
-                        <input type="number" class="form-control input-item-count" placeholder="0" min="0">
-                    </div>
-                    <div class="clearfix"></div>
-                </div>
-            {% endif %}
-        {% endfor %}
+                {% endif %}
+            {% endfor %}
+        </section>
     {% endfor %}
+    <div class="row-fluid checkout-button-row">
+        <div class="col-md-4 col-md-offset-8">
+            <button class="btn btn-block btn-primary btn-lg">
+                <i class="fa fa-shopping-cart"></i> {% trans "Proceed with checkout" %}
+            </button>
+        </div>
+        <div class="clearfix"></div>
+    </div>
 {% endblock %}
